--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
 .intro-text {
     font-size: 40px;
     line-height: 44px;
+    padding: 0 10%;
     text-align: center;
     color: #28283d;
 }
@@ -120,7 +121,7 @@ body {
 
 footer,
 .image-footer {
-    width: 320px;
+    width: 100%;
     height: 428px;
     text-align: center;
 } 
@@ -173,9 +174,8 @@ footer  {
   }
 
   @media only screen and (min-width: 375px) {
-    footer,
-    .image-footer {
-        width: 375px;
+    .intro-text {
+        padding: 0 15%;
     }
     
     .footer-paragraph-text {
@@ -184,13 +184,12 @@ footer  {
   }
 
   @media only screen and (min-width: 425px) {
-    .inner-text-heading {
-        padding: 0 18px;
+    .intro-text {
+        padding: 0 19%;
     }
     
-    footer,
-    .image-footer {
-        width: 425px;
+    .inner-text-heading {
+        padding: 0 18px;
     }
 
     .footer-heading-text {
@@ -237,9 +236,9 @@ footer  {
         display: block;
     }
     
-    footer,
     .image-footer2 {
-        width: 768px;
+        width: 100%;
+        height: 428px;
     }
   }
 
@@ -304,15 +303,6 @@ footer  {
         padding: 0 19%;
     }
 
-    footer,
-    .image-footer2 {
-        width: 1024px;
-    }
-
-    .image-footer2 {
-        height: 428px;
-    }
-
     .footer-text {
         display: flex;
         align-items: baseline;
@@ -334,40 +324,24 @@ footer  {
     }
   }
 
-  @media only screen and (min-width: 1440px) {
+  @media only screen and (min-width: 1340px) {
+    .intro-text {
+        padding: 0 34%;
+    }
+    
     .paragraph-text {
-        padding: 0 31%;
+        padding: 0 30%;
+    }
+
+    .inner-text-heading {
+        padding: 0 33%;
     }
 
     .inner-text-paragraph {
-        padding: 0 31%;
-    }
-    
-    footer,
-    .image-footer2 {
-        width: 1440px;
+        padding: 0 29%;
     }
 
     .footer-paragraph-text {
-        padding: 0 19%;
-    }
-  }
-
-  @media only screen and (min-width: 2560px) {
-    .paragraph-text {
-        padding: 0 31%;
-    }
-
-    .inner-text-paragraph {
-        padding: 0 31%;
-    }
-    
-    footer,
-    .image-footer2 {
-        width: 2560px;
-    }
-
-    .footer-paragraph-text {
-        padding: 0 19%;
+        padding: 0 16%;
     }
   }
