--- a/style.css
+++ b/style.css
@@ -164,6 +164,13 @@ body {
     background-color: #4D96A9; 
 }
 
+.error-message {
+    color: red;
+    display: block;
+    text-align: center;
+    padding-top: 10px;
+}
+
 .vr1,
 .vr2 {
     border: 1px solid;
